# DAT

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  analysis.py  notebook-EDA_describe.ipynb  pytest.ini  setup.cfg  setup.py
DAT_bkp/: README.md  setup.cfg  setup.py
DAT_bkp/notebooks/examples/: example-EDA_iris.ipynb  example-EDA_tips.ipynb  example-EDA_weather.ipynb
DAT_bkp/src/DAT/eda/: analysis.py  describe.py  htest.py  tools.py
eda/: analysis.py  bhatta_dist.py  describe.py  htest.py  tools.py
notebooks/: example-EDA_iris.ipynb  example-EDA_sunplots.ipynb  example-EDA_tips.ipynb  example-EDA_wine.ipynb  example-PLOT_iris.ipynb
notebooks/dev/: environment.yml  requirements.txt
notebooks/dev/plots/: one_numerical_or_categorical_variable_distribution.ipynb  pair_of_categorical_variables_distribution-heatmap.ipynb  pair_of_numerical_variables_distribution.ipynb  tools.py
notebooks/dev/tools/: dev-data_input_preparation.ipynb  dev-distance_between_records.ipynb  dev-function_decorators.ipynb
notebooks/examples/: example-EDA_iris.ipynb  example-EDA_sunplots.ipynb  example-EDA_tips.ipynb  example-EDA_titanic.ipynb  example-EDA_weather.ipynb  example-EDA_wine.ipynb
src/DAT/: __init__.py  eda.py  plots.py
src/DAT/eda/: __init__.py  describe.py
src/DAT/funcs/eda/: htest.py  tools.py
src/DAT/plot/: __init__.py
src/eda/: __init__.py  describe.py  htest.py
tests/: data.py  test_eda_describe.py  test_eda_main_methods.py  test_import_modules.py
