[metadata]
name = DAT
version = 0.5.1dev
author = Juan Quintana  
author_email = juan.armaguedon@icloud.com
description = A python package to provide data analysis tools which can be pip installed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmquintana79/DAT
project_urls =
    Bug Tracker = https://github.com/jmquintana79/DAT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
